--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/shinhyogeun/gh-practice#readme",
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
